--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
     <div class="widget-container">
         <iframe src="https://www.meteoblue.com/en/weather/widget/daily/nairobi_kenya_184745?geoloc=fixed&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&precipunit=MILLIMETER&coloured=coloured&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=1&windgust=1&winddirection=1&uv=1&humidity=1&precipitation=1&precipitationprobability=1&spot=1&pressure=0&layout=dark" frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 216px; height: 444px"></iframe>
-        <div style="font-size: 12px; text-align: center; margin-top: 5px;">
+<!--         <div style="font-size: 12px; text-align: center; margin-top: 5px;">
             <a href="https://www.meteoblue.com/en/weather/week/nairobi_kenya_184745?utm_source=daily_widget&utm_medium=linkus&utm_content=daily&utm_campaign=Weather%2BWidget" target="_blank" rel="noopener" style="color: #4285f4; text-decoration: none;">Weather data by meteoblue</a>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
