--- a/index.html
+++ b/index.html
@@ -4,29 +4,22 @@
     <title>Weather Widget</title>
     <style>
         /* Make the body take up full width with no margins */
-        html, body {
+        body {
             margin: 0;
             padding: 0;
             width: 100%;
             height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             overflow: visible; /* Allow content to be fully visible */
         }
         
-        /* Make the Elfsight widget container larger and centered */
+        /* Make the Elfsight widget container larger */
         .elfsight-app-d07ed5a8-8b84-44ad-a940-2a0da5c3d6e2 {
             width: 100% !important; /* Force 100% width */
             max-width: 800px !important; /* Set a maximum width if needed */
             height: 600px !important; /* Increase height to show all days */
             min-height: 600px !important; /* Ensure minimum height */
-            margin: 0 auto !important; /* Center the widget */
+            margin: 0 auto; /* Center the widget */
             overflow: visible !important; /* Ensure content isn't cut off */
-            display: block !important; /* Ensure proper display */
-            position: relative !important; /* Ensure positioning works */
-            left: 50% !important; /* Center horizontally */
-            transform: translateX(-50%) !important; /* Adjust for centering */
         }
         
         /* Target internal elements of the widget to ensure they scale properly */
@@ -41,7 +34,6 @@
             min-height: 400px !important;
             display: flex !important;
             flex-direction: column !important;
-            margin: 0 auto !important; /* Center these elements too */
         }
     </style>
 </head>
